# RJustAuth

./: Cargo.toml
rjustauth/: Cargo.toml
rjustauth/src/: error.rs  lib.rs
rjustauth/src/base/: mod.rs
rjustauth/src/base/enums/: auth_response_status.rs  mod.rs
rjustauth/src/base/model/: auth_callback.rs  auth_error.rs  auth_token.rs  auth_user.rs  mod.rs
rjustauth/src/github/: auth_github_request.rs  convert_github.rs  mod.rs
rjustauth/src/github/model/: github_access_token.rs  github_callback.rs  github_error.rs  mod.rs
rjustauth/src/utils/: auth_checker.rs  mod.rs
