[package]
name = "rjustauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
builder-pattern = "0.4.2"
url-builder = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"

reqwest = { version = "0.11", features = ["blocking", "json"] }
hyper = { version = "1", features = ["full"] }
async-trait = "0.1.75"
tracing = "0.1"
log = "0.4.0"